--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,22 @@
 {
   "dependencies": {
-    "npm": "^9.8.1"
+    "@sendgrid/mail": "^7.7.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "form-data": "^4.0.0",
+    "mailgun-js": "^0.22.0",
+    "nodemailer": "^6.9.4",
+    "nodemailer-mailgun-transport": "^2.1.5",
+    "npm": "^9.8.1",
+    "pm2": "^5.3.0",
+    "prisma": "^5.0.0"
+  },
+  "scripts": {
+    "kill-test": "pm2 start ecosystem.config.js --only server --env development --kill-timeout 3000",
+    "system-shutdown-test": "pm2 sendSignal server shutdown",
+    "start-server": "pm2 start ecosystem.config.js --only server --env development",
+    "start-server-production": "pm2 start ecosystem.config.js --only server --env production",
+    "stop-server": "pm2 stop ecosystem.config.js --only server",
+    "restart-server": "pm2 restart ecosystem.config.js --only server"
   }
 }
